replication/sutra-replication-package/sdk/sutra-compiler/tests/corpus/invalid/19_class_with_body.su
// Expected error: SUT0140 — class body must be empty in MVP.
// Methods, fields, operator implementations are deferred — see
// `todo.md` § "Ontology — make the class system real".

class Foo extends vector {
    function void bar() { }
}
